# echo-flux

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Makefile  README.md  devices.py  pyproject.toml  refactor.md  requirements-dev.txt  requirements.txt
.agent/rules/: 01-python-engine.md  02-react-desktop.md  03-architecture.md  04-python-style.md
.agent/skills/add-engine-backend/: SKILL.md
.agent/skills/add-ui-panel/: SKILL.md
.agent/skills/code-review/: SKILL.md
.agent/workflows/: bug-fix-engine.md  new-feature.md
apps/cli/: main.py
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Header.tsx  HistoryPanel.tsx  ModelManagerPanel.tsx  OverlayPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  SummaryModal.tsx  TranscriptPanel.tsx
apps/desktop/src/store/: engineStore.ts  types.ts
apps/desktop/src/store/slices/: configSlice.ts  transcriptSlice.ts  uiSlice.ts  wsSlice.ts
apps/desktop/src/styles/: global.css
apps/desktop/src/utils/: export.ts
engine/: main.py
engine/asr/: __init__.py  base.py  faster_whisper_backend.py
engine/asr/adapters/: transformers_asr.py
engine/audio/: __init__.py  input_manager.py  microphone.py  mixer.py  system_audio.py  vad.py
engine/core/: __init__.py  config.py  event_bus.py  exceptions.py  logging.py  model_manager.py  progress.py
engine/llm/: __init__.py  assistant.py
engine/server/: __init__.py  websocket_server.py
engine/services/: audio_pipeline.py  inference_controller.py
engine/translation/: __init__.py  base.py  fallback_backend.py  marian_backend.py  online_backend.py
scripts/: run.ps1  setup.ps1  setup.sh
